<resources>
    <string name="app_name">Can I Park?</string>
    <string name="title_activity_main_page">Can I Park?</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_noti">Notification</string>
    <string name="menu_spdeal">Special deal</string>
    <string name="menu_bookmark">Bookmark</string>
    <string name="menu_review">My Review</string>
    <string name="menu_history">History</string>
    <string name="menu_setting">Setting</string>
    <string name="menu_logout">Logout</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="title_activity_main_page2">MainPage2</string>
    <string name="title_activity_maps">Map</string>
</resources>
