<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/house"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_noti"
            android:icon="@drawable/bell"
            android:title="@string/menu_noti" />
        <item
            android:id="@+id/nav_spdeal"
            android:icon="@drawable/dis1"
            android:title="@string/menu_spdeal" />
        <item
            android:id="@+id/nav_bookmark"
            android:icon="@drawable/favorite"
            android:title="@string/menu_bookmark" />
        <item
            android:id="@+id/nav_review"
            android:icon="@drawable/review"
            android:title="@string/menu_review" />
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/history"
            android:title="@string/menu_history" />
        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/gear"
            android:title="@string/menu_setting" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/logout"
            android:title="@string/menu_logout" />
    </group>

</menu>
